# AdventOfCode2025

./: .clang-format  CMakeLists.txt  README.md  format.ps1
day1/: secret_entrance.cpp
day10/: factory.cpp
day11/: reactor.cpp
day12/: christmas_tree_farm.cpp
day2/: gift_shop.cpp
day3/: lobby.cpp
day4/: printing_department.cpp
day5/: cafeteria.cpp
day6/: trash_compactor.cpp
day7/: laboratories.cpp
day8/: playground.cpp
day9/: movie_theater.cpp
utils/: hash.h  mat.h  point2d.h  point3d.h  str_op.h
